# adv_reco

./: .gitignore  GP.md  README.md  pyproject.toml
adventure_project/: db.sqlite3  manage.py
adventure_project/adventure_project/: asgi.py  settings.py  urls.py  wsgi.py
adventure_project/adventures/: models.py  urls.py  views.py
adventure_project/adventures/management/commands/: generate_adventures.py  remove_adventures.py
adventure_project/adventures/migrations/: 0001_initial.py  0002_adventure_latitude_adventure_longitude.py  0003_adventure_adrenalin_adventure_kid_adventure_promoted.py  0004_rename_kid_adventure_kids.py
adventure_project/adventures/templates/: adventure_list.html  recommended_adventures.html
